--- a/db/ansible/container.yml
+++ b/db/ansible/container.yml
@@ -1,19 +1,9 @@
 version: "1"
 services:
-  # Add your containers here, specifying the base image you want to build from
-  # For example:
-  #
-  # web:
-  #   image: ubuntu:trusty
-  #   ports:
-  #     - "80:80"
-  #   command: ['/usr/bin/dumb-init', '/usr/sbin/apache2ctl', '-D', 'FOREGROUND']
-  #   dev_overrides:
-  #     environment:
-  #       - "DEBUG=1"
-  #
+  db:
+    image: centos:7
+    ports:
+      - "3306:3306"
+    command: ['/usr/bin/mysqld_safe']
+    
 registries: {}
-  # Add optional registries used for deployment. For example:
-  #  google:
-  #    url: https://gcr.io
-  #    namespace: my-cool-project-xxxxxx   
